@@ -1,3 +1,9 @@
+2009-07-22  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/40321
+	* gcc.c-torture/compile/pr40321.c: New testcase.
+	* g++.dg/torture/pr40321.C: Likewise.
+
 2009-07-22  Release Manager
 
 	* GCC 4.4.1 released.
