@@ -1,3 +1,11 @@
+2009-07-22  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/40321
+	* tree-ssa-pre.c (add_to_exp_gen): Also add names defined by
+	PHI nodes to the maximal set.
+	(make_values_for_phi): Add PHI arguments to the maximal set.
+	(execute_pre): Dump PHI_GEN and the maximal set.
+
 2009-07-22  Jakub Jelinek  <jakub@redhat.com>
 
 	* BASE-VER: Set to 4.4.2.
